--- a/src/components/CounterComp/CounterComp.css
+++ b/src/components/CounterComp/CounterComp.css
@@ -1,13 +1,28 @@
 .counterCompContainer{
     margin: 50px;
 }
-.counters{
+.counterTitle{
+    color: #636464;
+}
+.countersBox{
     background: #eaf5fa;
     margin: 30px;
     padding: 30px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    gap: 5%;
+    border: none;
+}
+.counterBox{
+display: flex;
+flex-direction: column;
 }
 .counter{
-
+font-size: 35px;
+font-weight:400
+}
+.labelCounter{
+    font-size: 25px;
+    font-weight: 100;
 }
