--- a/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
+++ b/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
@@ -38,3 +38,14 @@
 .accordionBtnNone {
   display: none;
 }
+
+
+@media(max-width:992px){
+  .SearchForSpecialistContainer{
+    height: 1050px;
+  }
+  .SearchForSpecialistBody{
+    display: flex;
+    flex-direction: column;
+  }
+}
