--- a/src/components/CardsComp/CardsComp.css
+++ b/src/components/CardsComp/CardsComp.css
@@ -1,54 +1,78 @@
-.cardsContainer{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-background-color: #F5F5F5;
+.cardsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
 }
 
-.cardContainer{
-width: 70em;
-display: flex;
-justify-content: space-between;
-align-items: center;
-background-color:#fff;
-margin: 25px;
-padding: 20px;
+.cardsTitle{
+  margin-top: 20px;
 }
 
-.cardPhotoBox{
-    flex: 1;
-}
-.cardPhoto{
-
-}
-
-.cardInfo{
-    flex: 1;
-}
-
-.specalistName{
-font-weight: bolder;
+.cardContainer {
+    min-height: 200px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  background-color: #fff;
+  margin: 25px;
+  padding: 20px;
+  border-radius: 5px;
 }
 
-.specalistAbility{
-
+.cardPhotoBox {
+    width: 18%;
+ background: #f5f5f5;
+  border-radius: 100%;
+  justify-content: center;
+  display: flex;
+  align-items: start;
+  padding: 20px;
+}
+.img {
+ width: 100px;
+ height: 100px;
+ 
 }
 
-.specalistAbout{
-
+.cardInfo {
+    display: flex;
+    flex-direction: column;
+  text-align: start;
+  gap: 3px;
+  width: 70%;
 }
 
-.specalistAvailabilityBox{
-
+.specalistName {
+  color: #1aa4de;
 }
 
-.specalistAvailability{
-
+.specalistAbility {
+    font-weight: bolder;
+    font-size: 19px;
 }
 
-.cardActions{
-    flex: 2;
-display: flex;
-flex-direction: column;
+.specalistAbout {
+}
+
+.specalistAvailabilityBox {
+    display: flex;
+    gap: 6px;
+}
+
+.specalistAvailability {
+}
+
+.cardActions {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.cardIcon{
+    color: #1aa4de;
 }
