--- a/src/components/TherapistTypesComp/TherapistTypesComp.css
+++ b/src/components/TherapistTypesComp/TherapistTypesComp.css
@@ -21,6 +21,8 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  text-decoration: none;
+  color: #282c34;
 }
 
 .therapistTypeBox:hover{
@@ -30,6 +32,7 @@
 .therapistTypeSpan {
     font-size: larger;
     font-weight: bolder;
+    text-decoration: none;
 }
 
 .logo {
