--- a/src/components/CardsComp/CardsComp.css
+++ b/src/components/CardsComp/CardsComp.css
@@ -6,12 +6,12 @@
   background-color: #f5f5f5;
 }
 
-.cardsTitle{
+.cardsTitle {
   margin-top: 20px;
 }
 
 .cardContainer {
-    min-height: 200px;
+  min-height: 200px;
   width: 50%;
   display: flex;
   justify-content: center;
@@ -24,8 +24,8 @@
 }
 
 .cardPhotoBox {
-    width: 18%;
- background: #f5f5f5;
+  width: 18%;
+  background: #f5f5f5;
   border-radius: 100%;
   justify-content: center;
   display: flex;
@@ -33,14 +33,13 @@
   padding: 20px;
 }
 .img {
- width: 100px;
- height: 100px;
- 
+  width: 100px;
+  height: 100px;
 }
 
 .cardInfo {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
   text-align: start;
   gap: 3px;
   width: 70%;
@@ -48,19 +47,20 @@
 
 .specalistName {
   color: #1aa4de;
+  text-decoration: none;
 }
 
 .specalistAbility {
-    font-weight: bolder;
-    font-size: 19px;
+  font-weight: bolder;
+  font-size: 19px;
 }
 
 .specalistAbout {
 }
 
 .specalistAvailabilityBox {
-    display: flex;
-    gap: 6px;
+  display: flex;
+  gap: 6px;
 }
 
 .specalistAvailability {
@@ -73,6 +73,6 @@
   gap: 5px;
 }
 
-.cardIcon{
-    color: #1aa4de;
+.cardIcon {
+  color: #1aa4de;
 }
