--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -26,3 +26,14 @@
     align-items: center;
     font-size: 20px
 }
+
+.range{
+    height: 70px;
+}
+
+.rangeInput{
+    border: none;
+    box-shadow: none;
+    height: 5px;
+}
+
