--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -11,6 +11,7 @@
 .searchInput{
     border: none;
     outline: none;
+    box-shadow: none;
     padding-left: 10px;
 }
 .short{
@@ -35,5 +36,7 @@
     border: none;
     box-shadow: none;
     height: 5px;
+    margin: 0;
+    padding: 0;
 }
 
