--- a/src/components/SearchInput/SearchInput.css
+++ b/src/components/SearchInput/SearchInput.css
@@ -4,7 +4,7 @@
     border-radius: 5px;
     display: flex;
     /* justify-content: space-between; */
-    background: #fff;;
+    /* background: #fff;; */
     margin: 10px;
     outline-color: rgba(40, 170, 170, 0.356);
 }
