--- a/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
+++ b/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
@@ -11,7 +11,7 @@
 
 .SearchForSpecialistBody {
   display: grid;
-  grid-template-columns: repeat(5, auto);
+  grid-template-columns: repeat(5, 200px);
   gap: 45px;
   margin: 10px;
   justify-content: center;
@@ -39,6 +39,20 @@
   display: none;
 }
 
+.inputBtn{
+  max-width: 80px;
+  padding: 10px;
+  margin-left: 50px;
+  background-color: #eaf5fa;
+  font-size: large;
+  font-weight: 500;
+  border-radius: 5px;
+  border: none;
+}
+
+.inputBtn:hover{
+  color: rgb(55, 0, 255);
+}
 
 @media(max-width:992px){
   .SearchForSpecialistContainer{
