--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  font-family: 'Nunito Sans', sans-serif;
+  background-color: #145c69;
+  color: #ffffff;
 }
 
 .App-logo {
