--- a/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
+++ b/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
@@ -1,21 +1,38 @@
 .SearchForSpecialistContainer {
-  /* background-color: #eaf5fa; */
-  padding: 20px;
-  height: 260px;
-}
-
-.accordion {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* padding: 20px; */
+  height: 240px;
+  color: #145c69;
+  background-color: #fff;
+  margin: 20px;
+  width: 35%;
+}
+
+/* .accordion {
+  display: flex;
+  flex-direction: column;
+} */
+.SearchForSpecialistTitleBox {
+  grid-column-start: 1;
+  grid-column-end: -1;
+}
+.SearchForSpecialistTitle {
+  color: #145c69;
 }
 
 .SearchForSpecialistBody {
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
   display: grid;
-  grid-template-columns: repeat(5, 200px);
-  gap: 45px;
-  margin: 10px;
+  grid-template-columns: repeat(4, auto);
+  gap: 15px 65px;
   justify-content: center;
   align-items: center;
+  
 }
 
 .advencedFilter {
@@ -39,10 +56,16 @@
   display: none;
 }
 
-.inputBtn{
+.inputBtnBox {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  justify-content: center;
+  align-items: center;
+}
+.inputBtn {
   max-width: 80px;
   padding: 10px;
-  margin-left: 50px;
+  /* margin-left: 50px; */
   background-color: #eaf5fa;
   font-size: large;
   font-weight: 500;
@@ -50,15 +73,21 @@
   border: none;
 }
 
-.inputBtn:hover{
+.inputBtn:hover {
   color: rgb(55, 0, 255);
 }
 
-@media(max-width:992px){
-  .SearchForSpecialistContainer{
-    height: 1050px;
-  }
+@media (max-width: 1650px) {
   .SearchForSpecialistBody{
+    
+    
+  }
+}
+@media (max-width: 992px) {
+  /* .SearchForSpecialistContainer {
+    height: 1050px;
+  } */
+  .SearchForSpecialistBody {
     display: flex;
     flex-direction: column;
   }
