--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Segoe UI', serif;;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 body {
