--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,18 @@
+:root{
+  --mainBackGround:#477B6A;
+  --secondBackGround:#F7EDD4;
+  --spanColor:#093426;
+  --specialColor:#FDBA12;
+  --logoColor:#9F1473;
+  --footerBackGround:#093426
+}
+
 .App {
   text-align: center;
   font-family: 'Nunito Sans', sans-serif;
-  background-color: #145c69;
-  color: #ffffff;
+  background-color: var(--mainBackGround);
+  color:var(--spanColor)
+ 
 }
 
 .App-logo {
