--- a/src/components/CarouselComp/CarouselComp.css
+++ b/src/components/CarouselComp/CarouselComp.css
@@ -1,14 +1,14 @@
 .carouselContainer {
-  /* background: #fff; */
   padding: 10px;
   margin: 4%;
   width: 70%;
- 
   border-radius: 5px;
+  font-weight: bold;
 }
 
 
 .carouselBox{
+  height: 250px;
 }
 
 .carouselItem{
@@ -18,12 +18,12 @@
 .carouselItemLink {
   cursor: pointer;
   text-decoration: none;
-  color: #fff;
+  color: var(--specialColor);
 }
 
 .carouselImg{
   width: 10%;
-  background: #eaf5fa;
+  /* background: var(--specialColor); */
   margin: 15px;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .therapistTypeBox:hover{
-    color: #16aff6;
+    color: var(--spanColor);
 }
 
 .therapistTypeSpan {
