--- a/src/components/CounterComp/CounterComp.css
+++ b/src/components/CounterComp/CounterComp.css
@@ -1,11 +1,16 @@
 .counterCompContainer{
-    margin: 50px;
+    background-color: var(--secondBackGround);
+    width: 100%;
+    border-top-right-radius: 20%;
+    border-top-left-radius: 20%;
 }
 .counterTitle{
-    color: #636464;
+    color: var(--specialColor);
 }
 .countersBox{
-    background: #eaf5fa;
+    border-top-right-radius: 20%;
+    border-top-left-radius: 20%;
+    background-color: var(--secondBackGround);
     margin: 30px;
     padding: 30px;
     display: flex;
@@ -17,10 +22,13 @@
 .counterBox{
 display: flex;
 flex-direction: column;
+background: var(--secondBackGround);
+color: var(--spanColor);
 }
 .counter{
 font-size: 35px;
-font-weight:400
+font-weight:bold;
+color: var(--logoColor);
 }
 .labelCounter{
     font-size: 25px;
