--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,21 @@
+.headerContainer{
+    background-color: var(--secondBackGround);
+    z-index: 9999;
+    position: fixed;
+    width: 100%;
+    height: 7%;
+}
+
+.navBarLogo{
+    color: var(--logoColor);
+}
+
+.navBarText{
+    color: var(--logoColor);
+    margin-right: 10px;
+    font-weight: bold;
+}
+
 .magnifying-glass-icon{
-    cursor: pointer;
+    cursor: pointer;  
 }
