--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,25 +1,65 @@
-.headerContainer{
-    background-color: var(--secondBackGround);
-    z-index: 9999;
-    position: fixed;
-    width: 100%;
-    height: 7%;
+.headerContainer {
+  /* background-color: var(--secondBackGround); */
+  z-index: 9999;
+  position: fixed;
+  width: 100%;
+  height: 7%;
 }
 
-.navBarLogo{
+.navBarLink {
+  border: 2px var(--secondBackGround) solid;
+  border-radius: 100px;
+  margin: 0 4px;
+  font-weight: bolder;
+  color: var(--secondBackGround);
+}
+
+.navBarLink:hover{
+    border-color: var(--spanColor);
+}
+
+.logOutBg{
+    color: var(--spanColor);
+    border-color: var(--spanColor);
+}
+
+.bg {
+  background-color: var(--secondBackGround);
+}
+
+.signUp {
+  background-color: var(--secondBackGround);
+  color: var(--spanColor);
+}
+
+.signUpBg{
     color: var(--logoColor);
+    border-color: var(--logoColor);
 }
 
-.navBarText{
+.signUp:hover{
+    background-color: var(--specialColor);
+    border-color: var(--specialColor);
+}
+
+.navBarText {
+  color: var(--secondBackGround);
+  margin-right: 10px;
+  font-weight: bold;
+}
+
+.magnifying-glass-icon {
+  cursor: pointer;
+}
+
+.psyProjectLogo {
+  width: 100px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+/* .navBarLogo {
     color: var(--logoColor);
-    margin-right: 10px;
-    font-weight: bold;
-}
-
-.magnifying-glass-icon{
-    cursor: pointer;  
-}
-
-.psyProjectLogo{
-width: 350px;
-}
+  } */
