--- a/src/pages/Specialties/Specialties.css
+++ b/src/pages/Specialties/Specialties.css
@@ -1,108 +1,107 @@
 .cardsContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
-  }
-  
-  .cardsTitle {
-    margin-top: 20px;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+}
+
+.cardsTitle {
+  margin-top: 90px;
+}
+
+.cardContainer {
+  min-height: 200px;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  background-color: #fff;
+  margin: 25px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.cardPhotoBox {
+  width: 18%;
+}
+
+.cardLeftSideBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.img {
+  width: 100px;
+  height: 100px;
+}
+
+.cardInfo {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  gap: 3px;
+  width: 70%;
+}
+
+.specalistName {
+  color: #1aa4de;
+  text-decoration: none;
+}
+
+.specalistAbility {
+  font-weight: bolder;
+  font-size: 19px;
+}
+
+.specalistAbout {
+}
+
+.specalistAvailabilityBox {
+  display: flex;
+  gap: 6px;
+}
+
+.specalistAvailability {
+}
+
+.cardActions {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.cardIcon {
+  color: #1aa4de;
+}
+
+@media (max-width: 950px) {
   .cardContainer {
-    min-height: 200px;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    background-color: #fff;
-    margin: 25px;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
-  .cardPhotoBox {
-    width: 18%;
-    background: #f5f5f5;
-    border-radius: 100%;
-    justify-content: center;
-    display: flex;
-    align-items: start;
-    padding: 20px;
-  }
-  .img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .cardInfo {
-    display: flex;
     flex-direction: column;
-    text-align: start;
-    gap: 3px;
-    width: 70%;
+    width: 38%;
   }
-  
-  .specalistName {
-    color: #1aa4de;
-    text-decoration: none;
+
+  .cardPhotoBox {
+    width: 60%;
   }
-  
-  .specalistAbility {
-    font-weight: bolder;
-    font-size: 19px;
-  }
-  
-  .specalistAbout {
-  }
-  
-  .specalistAvailabilityBox {
-    display: flex;
-    gap: 6px;
-  }
-  
-  .specalistAvailability {
-  }
-  
+
   .cardActions {
     width: 25%;
-    display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 5px;
+    justify-content: center;
   }
-  
-  .cardIcon {
-    color: #1aa4de;
-  }
-  
-  
-  @media(max-width:950px){
-    .cardContainer{
-      flex-direction: column;
-      width: 38%;
-    }
-  
-    .cardPhotoBox{
-      width: 60%;
-    }
-  
-    .cardActions {
-      width: 25%;
-      flex-direction: row;
-      gap: 5px;
-      justify-content: center;
-    }
-  }
-  
-  
-  @media(max-width:500px){
-  .cardContainer{
+}
+
+@media (max-width: 500px) {
+  .cardContainer {
     flex-direction: column;
     width: 75%;
   }
-  .cardPhotoBox{
+  .cardPhotoBox {
     width: 60%;
   }
   .cardActions {
@@ -111,5 +110,4 @@
     gap: 5px;
     justify-content: center;
   }
-  }
-  
+}
