--- a/src/pages/Specialties/Specialties.css
+++ b/src/pages/Specialties/Specialties.css
@@ -3,11 +3,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: var(--secondBackGround);
 }
 
 .cardsTitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-top: 90px;
+  width: 100%;
+  height: 100px;
+  background-color: var(--mainBackGround);
+  color: var(--specialWhite);
 }
 
 .cardContainer {
@@ -16,7 +23,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 15px;
+  gap: 35px;
   background-color: #fff;
   margin: 25px;
   padding: 20px;
@@ -27,29 +34,36 @@
   width: 18%;
 }
 
+
 .cardLeftSideBox {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.img {
-  width: 100px;
-  height: 100px;
+.cardRightSideBox {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  width: 70%;
+  font-size: 20px;
+  gap: 20px;
 }
 
 .cardInfo {
   display: flex;
   flex-direction: column;
   text-align: start;
-  gap: 3px;
-  width: 70%;
 }
 
 .specalistName {
-  color: #1aa4de;
+  color: var(--mainBackGround);
   text-decoration: none;
 }
+.specalistName:hover {
+  color: var(--specialColor);
+}
+:hover
 
 .specalistAbility {
   font-weight: bolder;
@@ -75,7 +89,7 @@
 }
 
 .cardIcon {
-  color: #1aa4de;
+  color: var(--mainBackGround);
 }
 
 @media (max-width: 950px) {
