--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,17 @@
 :root{
-  --mainBackGround:#477B6A;
-  --secondBackGround:#F7EDD4;
-  --spanColor:#093426;
-  --specialColor:#FDBA12;
-  --logoColor:#9F1473;
+  --mainBackGround:#49977E;
+  --secondBackGround:#FCF8EF;
+  --spanColor:#0A3829;
+  --specialColor:#FDBF24;
+  --logoColor:#BC0E85;
   --specialWhite:#f7f0e6;
 }
 
 .App {
   text-align: center;
   font-family: 'Nunito Sans', sans-serif;
-  background-color: var(--mainBackGround);
   color:var(--spanColor);
- background-image: url('./icons/backGround26.png');
+ background-image: url('./icons/backGround50.png');
 }
 
 .App-logo {
