--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,14 @@
   position: fixed;
   width: 100%;
   height: 7%;
+  top: 0;
+}
+
+
+
+.bg {
+  background-color: var(--secondBackGround);
+  box-shadow:0.1px 2px 1px 1px var(--specialWhite);
 }
 
 .navBarLink {
@@ -12,6 +20,11 @@
   margin: 0 4px;
   font-weight: bolder;
   color: var(--secondBackGround);
+}
+
+
+.dropDownLink{
+  color: var(--logoColor);
 }
 
 .navBarLink:hover{
@@ -23,6 +36,11 @@
   color: var(--secondBackGround);
 }
 
+.boldBg{
+  font-weight: bold;
+  color: var(--spanColor);
+}
+
 .bold:hover{
   color: var(--specialColor);
 }
@@ -30,6 +48,12 @@
 #bold {
   font-weight: bold;
   color: var(--secondBackGround);
+  transition: 0.3s;
+}
+
+#boldBg{
+  font-weight: bold;
+  color: var(--spanColor);
 }
 
 
@@ -38,9 +62,7 @@
     border-color: var(--spanColor);
 }
 
-.bg {
-  background-color: var(--secondBackGround);
-}
+
 
 .signUp {
   background-color: var(--secondBackGround);
@@ -60,12 +82,26 @@
 .navBarText {
   color: var(--secondBackGround);
   margin-right: 10px;
+  margin-top: 1px;
+  font-weight: bold;
+  
+}
+
+.navBarTextBg{
+  color: var(--spanColor);
+  margin-right: 10px;
+  margin-top: 1px;
   font-weight: bold;
 }
 
 .magnifying-glass-icon {
   cursor: pointer;
   color: var(--secondBackGround);
+}
+
+.magnifying-glass-iconBd {
+  cursor: pointer;
+  color: var(--span);
 }
 
 .psyProjectLogo {
