--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,8 +2,16 @@
 .footer-dark {
   padding:50px 0;
   color:#f0f9ff;
-  background-color:#282d32;
+  background-color:var(--spanColor);
+  /* background-color:#282d32; */
+  /* bottom: 0;
+  width: 100%; */
 }
+
+.container{
+  height: 180px;
+}
+
 
 .footer-dark h3 {
   margin-top:0;
