--- a/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
+++ b/src/components/SearchForSpecialistComp/SearchForSpecialistComp.css
@@ -31,7 +31,9 @@
   gap: 15px 65px;
   justify-content: center;
   align-items: center;
-  
+  box-shadow:
+  /* 0 0 0 2px var(--spanColor), */
+  0.3em 0.3em 1em var(--spanColor);
 }
 
 .advencedFilter {
@@ -66,14 +68,15 @@
   padding: 10px;
   /* margin-left: 50px; */
   background-color: var(--secondBackGround);
-  font-size: large;
-  font-weight: bold;
+  color: var(--logoColor);
+  font-size: 23px;
+  /* font-weight: bold; */
   border-radius: 5px;
   border: none;
 }
 
 .inputBtn:hover {
-  color: var(--specialColor)
+  color: var(--specialColor);
 }
 
 @media (max-width: 992px) {
