--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,10 @@
 .headerContainer {
   /* background-color: var(--secondBackGround); */
+  top: 0;
   z-index: 9999;
-  /* width: 100%; */
+  width: 100%;
   height: 7%;
+  position: fixed;
 }
 
 .bg {
@@ -111,8 +113,14 @@
 
 @media (max-width: 993px) {
 
+  .headerContainer{
+    position: absolute;
+    top: -50px;
+  }
+
   .bg{
 background: none;
+box-shadow:none
   }
 
   .bold {
