--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -38,9 +38,14 @@
    
 }
 
+input[type="number"]::-webkit-inner-spin-button{
+  display: none;
+}
+
 .flex {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 20px;
 }
 
