--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -3,13 +3,13 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
-  height: 800px;
+  min-height: 800px;
   background-color: var(--secondBackGround);
   background-image: url('../../icons/backGround52.png');
 }
 
 .signUpContainer {
-  height: 800px;
+  min-height: 800px;
   display: flex;
   justify-content: center;
 }
@@ -32,6 +32,12 @@
 
 .signInForm{
   margin-top: 70px;
+  background-color: var(--secondBackGround);
+  padding: 40px;
+  box-shadow:
+  /* 0 0 0 2px var(--spanColor), */
+  0.3em 0.3em 1em var(--spanColor);
+  border-radius: 20px;
 }
 
 .signUpOption {
@@ -77,4 +83,11 @@ font-size: 60px;
   margin-top: 0.25rem;
   font-size: 0.875em;
   color: #dc3545;
+}
+
+@media (max-width: 1065px){
+  
+  .flex{
+    flex-direction: column;
+  }
 }
