--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 
 .footer-dark {
   padding:50px 0;
-  color:#f0f9ff;
+  color:var(--specialColor);
   background-color:var(--spanColor);
   /* background-color:#282d32; */
   /* bottom: 0;
