--- a/src/pages/Specialties/Specialties.css
+++ b/src/pages/Specialties/Specialties.css
@@ -5,14 +5,14 @@
   align-items: center;
   background-color: var(--secondBackGround);
   background-image: url('../../icons/backGround52.png');
-  margin-top: 40px;
+  min-height: 655px;
 }
 
 .cardsTitle {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 90px;
+  margin-top: 100px;
   width: 100%;
   height: 90px;
   /* background-color: var(--mainBackGround); */
@@ -151,36 +151,28 @@ height: 800px;
 }
 
 
-@media (max-width: 950px) {
+@media (max-width: 1050px) {
   .cardContainer {
     flex-direction: column;
-    width: 38%;
+   
   }
 
-  .cardPhotoBox {
-    width: 60%;
-  }
+ 
 
-  .cardActions {
+  /* .cardActions {
     width: 25%;
     flex-direction: row;
     gap: 5px;
     justify-content: center;
+  } */
+}
+
+@media (max-width: 560px) {
+  .cardContainer {
+    flex-direction: column;
+    width: 80%;
   }
 }
 
-@media (max-width: 500px) {
-  .cardContainer {
-    flex-direction: column;
-    width: 75%;
-  }
-  .cardPhotoBox {
-    width: 60%;
-  }
-  .cardActions {
-    width: 25%;
-    flex-direction: row;
-    gap: 5px;
-    justify-content: center;
-  }
-}
+
+
